# puzzle

./: .clang-format  CMakeLists.txt  CMakePresets.json
src/: main.cpp
src/app/: app_manager.cpp  app_manager.hpp  puzzle.cpp  puzzle.hpp  score.cpp  score.hpp  solver.cpp  solver.hpp
src/ui/screens/: base_screen.cpp  base_screen.hpp  completed_screen.cpp  completed_screen.hpp  game_screen.cpp  game_screen.hpp  scores_screen.cpp  scores_screen.hpp  solver_screen.cpp  solver_screen.hpp  start_screen.cpp  start_screen.hpp
